--- a/BGServices/Exon.BGServices/appsettings.json
+++ b/BGServices/Exon.BGServices/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SQLServer": "data source=MGSRKH\\SQLEXPRESS2019;initial catalog=Exon;integrated security=true;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
