--- a/BGServices/Exon.BGServices/appsettings.json
+++ b/BGServices/Exon.BGServices/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SQLServer": "data source=MGSRKH\\SQLEXPRESS2019;initial catalog=Exon;integrated security=true;Trusted_Connection=True;TrustServerCertificate=True;"
+    "SQLServer": "data source=MGSRKH\\SQLEXPRESS2019;initial catalog=ExonDB;integrated security=true;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
